--- a/all.css
+++ b/all.css
@@ -102,7 +102,8 @@ input[type='checkbox'] {
   text-align: center;
 }
 .text-left{
-  text-align-last: left;
+  -moz-text-align-last: left;
+       text-align-last: left;
 }
 .text-i{
   font-style: italic;
@@ -171,6 +172,7 @@ input[type='checkbox'] {
 }
 .align-end{
   align-items: end;
+  -webkit-align-items: flex-end;
 }
 .align-struch{
   align-items: struch;
